--- a/app/templates/posts/create.html
+++ b/app/templates/posts/create.html
@@ -44,14 +44,27 @@
                     {{ form.video(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">  
+            <div class="form-group">
+                {{ form.photo1.label(class="form-control-label") }}
+                {% if form.photo1.errors %}
+                    {{ form.photo1(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.photo1.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.photo1(class="form-control form-control-lg", multiple="multiple") }}
+                {% endif %}
+            </div>
+            <!-- <div class="form-group">  
                 {{ form.photo1 }}
                 {% if form.photo1.errors %}
                     {% for error in form.photo1.errors %}
                         <span class="text-danger">{{ error }}</span></br>
                     {% endfor %}
                 {% endif %}
-            </div>
+            </div> -->
         </fieldset>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
