--- a/app/templates/posts/detail.html
+++ b/app/templates/posts/detail.html
@@ -2,9 +2,9 @@
 {% block content %}
   <article class="media content-section">
     {% if user_data.avatar %}
-    <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile/'+user_data.avatar) }}">
+    <img class="rounded-circle article-img" src="{{ post.avatar }}" width="125" height="125">
     {% else %}
-    <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile/'+'default.jpg') }}">
+    <img class="rounded-circle article-img" src="{{ post.avatar }}" width="125" height="125">
     {% endif %}
     <div class="media-body">
       <div class="article-metadata">
@@ -17,12 +17,31 @@
       </div>
       <h2 class="article-title">{{ post.title }}</h2>
       <p class="article-content">{{ post.content }}</p>
-      {% if post.photo1 %}
-      <img src="{{ url_for('static', filename='profile/'+post.photo1) }}">
-      {% endif %}
-      {% if post.video %}
-      <p class="article-content"><iframe width="420" height="345" src='{{ post.video }}'frameborder="0" allowfullscreen></iframe></p>
-      {% endif %}
+      
+      <div id="carousel-{{ post.id }}" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            {% if post.photo1 %}
+                {% for photo_url in post.photo1.split(',') %}
+                    <div class="carousel-item {% if loop.first %}active{% endif %}">
+                        <img class="d-block w-100" src="{{ photo_url }}" alt="Image" width="400" height="300">
+                    </div>
+                {% endfor %}
+            {% endif %}
+            {% if post.video %}
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="{{ photo_url }}" alt="Image" width="400" height="300">
+                </div>
+            {% endif %}
+        </div>
+        <a class="carousel-control-prev" href="#carousel-{{ post.id }}" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel-{{ post.id }}" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+     </div>
     </div>
   </article>
   <!-- Modal -->
