--- a/app/templates/posts/home.html
+++ b/app/templates/posts/home.html
@@ -3,9 +3,9 @@
     {% for post in posts %}
         <article class="media content-section">
           {% if post.avatar %}
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile/'+ post.avatar) }}">
+          <img class="rounded-circle article-img" src="{{ post.avatar }}" width="125" height="125">
           {% else %}
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile/'+ 'default.jpg') }}">
+          <img class="rounded-circle article-img" src="{{ post.avatar }}" width="125" height="125">
           {% endif %}
           <div class="media-body">
             <div class="article-metadata">
@@ -23,18 +23,30 @@
             </div>
             <h2><a class="article-title">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
-            {% if post.photo1 and post.video %}
-            <div class="container">
-              <div class="mySlides">
-                <img src="{{ url_for('static', filename='profile/'+post.photo1) }}">
-              </div>                
-              <div class="mySlides">
-                <iframe width="420" height="345" src='{{ post.video }}'frameborder="0" allowfullscreen></iframe>
-              </div>
-              <a class="prev" onclick="plusSlides(-1)">❮</a>
-              <a class="next" onclick="plusSlides(1)">❯</a>
+            <div id="carousel-{{ post.id }}" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    {% if post.photo1 %}
+                        {% for photo_url in post.photo1.split(',') %}
+                            <div class="carousel-item {% if loop.first %}active{% endif %}">
+                                <img class="d-block w-100" src="{{ photo_url }}" alt="Image" width="400" height="300">
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                    {% if post.video %}
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="{{ photo_url }}" alt="Image" width="400" height="300">
+                        </div>
+                    {% endif %}
+                </div>
+                <a class="carousel-control-prev" href="#carousel-{{ post.id }}" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-{{ post.id }}" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            {% endif %}
           </div>
           {% if user_id %}
             <div> 
