--- a/app/templates/posts/updatepost.html
+++ b/app/templates/posts/updatepost.html
@@ -44,12 +44,17 @@
                     {{ form.video(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">  
-                {{ form.photo1 }}
+            <div class="form-group">
+                {{ form.photo1.label(class="form-control-label") }}
                 {% if form.photo1.errors %}
-                    {% for error in form.photo1.errors %}
-                        <span class="text-danger">{{ error }}</span></br>
-                    {% endfor %}
+                    {{ form.photo1(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.photo1.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.photo1(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
         </fieldset>
